--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
-        ]
+        ],
+        "test:coverage": "phpunit --coverage-html coverage"
     },
     "config": {
         "preferred-install": "dist",
